Allow creators of copy to copy their own map art